docs/7.52/md/abencontext.md
---
title: "Contexts (Obsolete)"
description: |
  Contexts are repository objects(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrepository_object_glosry.htm 'Glossary Entry') defined abstractly in Context Builder(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencontext_builder_glosry.htm 'Glossary Entry') (transac
version: "7.52"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencontext.htm"
abapFile: "abencontext.htm"
keywords: ["do", "if", "try", "class", "data", "abencontext"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Obsolete Language Elements](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_obsolete.htm) →  [Obsolete Processing of External Data](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendata_storage_obsolete.htm) → 

Contexts (Obsolete)

Contexts are [repository objects](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrepository_object_glosry.htm "Glossary Entry") defined abstractly in [Context Builder](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencontext_builder_glosry.htm "Glossary Entry") (transaction SE33) in [ABAP Workbench](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_workbench_glosry.htm "Glossary Entry") that are used to derive the values of additional fields from key fields. ABAP programs work with instances of contexts.

A context comprises fields and modules. The fields of a context are subdivided into key fields and derived fields. The modules describe how the values of the derived fields are created from the key fields. Modules are based on

-   [foreign key dependencies](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenforeign_key_dependency_glosry.htm "Glossary Entry") between database tables and

-   function modules defined in ABAP Dictionary,

-   or on other contexts.

-   Viewed from a technical perspective, contexts are special ABAP programs (context programs CONTEXT\_X\_...) generated by Context Builder.

An ABAP program can create one or more instances of a context. It can supply the key fields for each instance with values and query the fields derived. Each context has a cross-transaction [buffer](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencontext_buffer.htm) on the [application server](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenapplication_server_glosry.htm "Glossary Entry"), whose attributes are defined in Context Builder. When an instance is queried for values, the system first searches the corresponding buffer for a record with the corresponding key fields. Only if there are not yet any values recorded for this key are they derived from the modules and written to the buffer.

The statements [CONTEXTS](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcontexts.htm), [SUPPLY](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapsupply.htm), and [DEMAND](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapdemand.htm) are used to handle contexts.

Note

Although contexts can be compared with highly specialized classes, they are not [ABAP Objects](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_objects_glosry.htm "Glossary Entry"). Contexts were introduced for high-performance access to frequently required derived data. Since the introduction of ABAP Objects, further development of contexts has been discontinued. Contexts can now be replaced by [shared objects](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenshared_objects_glosry.htm "Glossary Entry").

Continue
[Contexts - Buffering Concept](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencontext_buffer.htm)
[CONTEXTS](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapcontexts.htm)
[SUPPLY](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapsupply.htm)
[DEMAND](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abapdemand.htm)
![Example](exa.gif "Example") [Contexts, message handling](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencontext_message_abexa.htm)