docs/7.57/md/abencontext.md
---
title: "Contexts (Obsolete)"
description: |
  Contexts are repository objects(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrepository_object_glosry.htm 'Glossary Entry') defined abstractly in the Context Builder(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencontext_builder_glosry.htm 'Glossary Entry') (tra
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencontext.htm"
abapFile: "abencontext.htm"
keywords: ["do", "if", "try", "class", "data", "abencontext"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Obsolete Language Elements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_obsolete.htm) →  [Obsolete Processing of External Data](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendata_storage_obsolete.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: Contexts \(Obsolete\), ABENCONTEXT, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0ASugges
tion for improvement:)

Contexts (Obsolete)

Contexts are [repository objects](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrepository_object_glosry.htm "Glossary Entry") defined abstractly in the [Context Builder](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencontext_builder_glosry.htm "Glossary Entry") (transaction SE33) in the [ABAP Workbench](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_workbench_glosry.htm "Glossary Entry") that are used to derive the values of additional fields from key fields. ABAP programs work with instances of contexts.

A context consists of fields and modules. The fields of a context are subdivided into key fields and derived fields. The modules describe how the values of the derived fields are created from the key fields. Modules are based on

-   [foreign key dependencies](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenforeign_key_dependency_glosry.htm "Glossary Entry") between database tables defined in the ABAP Dictionary and
-   function modules,
-   or in other contexts.
-   Viewed from a technical perspective, contexts are special ABAP programs (context programs CONTEXT\_X\_...) generated by the Context Builder.

An ABAP program can create one or more instances of a context. It can supply the key fields for each instance with values and query the fields derived. Each context has a cross-transaction [buffer](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencontext_buffer.htm) on the [AS instance](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenas_instance_glosry.htm "Glossary Entry"), whose properties are defined in the Context Builder. When an instance is queried for values, the system first searches the corresponding buffer for a data record with the corresponding key fields. Only if no values exist yet for this key are they derived from the modules and written to the buffer.

The statements [CONTEXTS](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapcontexts.htm), [SUPPLY](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapsupply.htm), and [DEMAND](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapdemand.htm) are used to handle contexts.

Hint

Although contexts can be compared with highly specialized classes, they are not part of [ABAP Objects](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_objects_glosry.htm "Glossary Entry"). Contexts were introduced for high-performance access to frequently required derived data. Since the introduction of ABAP Objects, further development of contexts has been discontinued. Contexts can now be replaced by [shared objects](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenshared_objects_glosry.htm "Glossary Entry").

Continue
[Contexts - Buffering Concept](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencontext_buffer.htm)
[CONTEXTS](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapcontexts.htm)
[SUPPLY](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapsupply.htm)
[DEMAND](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abapdemand.htm)
![Example](exa.gif "Example") [Contexts - Message Handling](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencontext_message_abexa.htm)